// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "primary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "3:2",
                        "uri": "https://image-2.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <span>
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "fullwidth",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "3:2",
                        "uri": "https://image-2.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <span>
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "secondary",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "3:2",
                        "uri": "https://image-2.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <span>
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <div
              id="0"
            >
              <div>
                <div>
                  <ArticleImage
                    captionOptions={
                      Object {
                        "caption": "A Caption",
                        "credits": "Some Credits",
                      }
                    }
                    imageOptions={
                      Object {
                        "display": "inline",
                        "highResSize": null,
                        "lowResQuality": 3,
                        "lowResSize": 400,
                        "ratio": "9:4",
                        "uri": "https://image-inline.io",
                      }
                    }
                  />
                </div>
              </div>
            </div>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <span>
              'Change has begun': Starmer gives first conference speech
            </span>
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;
